# more-upload-stats

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.rst  DESCRIPTION  PLUGININFO  README.rst  __init__.py  change-version-doc.sh  description.txt  generate_changelog.py  pyproject.toml  readme.rst  release  release.sh  releaser  scripts.py  stats.bak.json  template.html
.github/workflows/: zip-n-release.yaml
css/: main.css
docs/auxil/: load_config.py  no_docstring.py  sphinx_hooks.py
docs/source/: changes.rst  conf.py  defaults.rst  html.rst  index.rst  plugin.rst  utils.rst
html/: template.html
html/css/: main.css
plugin/: __init__.py  base.py  tag.py  utils.py
upload_stats/: __init__.py  base.py  changes.py  defaults.py  html.py  plugin.py  tag.py  utils.py
upload_stats/core/: __init__.py  base.py  threading.py  utils.py  version.py
