[project]
name = "upload_stats"
version = "3.2.0"
description = "More detailed upload statistics for Nicotine+"
authors = [{ name = "Nachtalb", email = "na@nachtalb.io" }]
license = "MIT"
readme = "README.rst"
requires-python = ">=3.9,<3.14"

[dependency-groups]
dev = [
  { include-group = "docs" },
  "black",
  "ruff",
  "isort",
  "mypy",
  "ipdb",
  "pre-commit",
]
docs = [
  "sphinx",
  "furo",
  "sphinx-paramlinks",
  "sphinx-copybutton",
  "sphinx-inline-tabs",
  "sphinxcontrib-mermaid",
  "enum-tools[sphinx]",
]

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120
preview = true
target-version = ["py39"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.mypy]
python_version = "3.9"
show_error_codes = true
pretty = true
strict = true

[[tool.mypy.overrides]]
module = "pynicotine.*"
ignore_missing_imports = true

[project.scripts]
build-docs = "scripts:build_docs"
open-docs = "scripts:open_docs"
check = "scripts:check"
build-changelog = "scripts:build_changelog"
release = "scripts:release"

[tool.uv]
package = true

[tool.uv.build-backend]
namespace = true
module-name = "upload_stats"
module-root = ""

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"
change-version = "scripts:change_version"
